Modified index file

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
      <!-- Font awesome -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
 
-<!--     
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
---> 
      <title>Digits</title>
 
  </head>
  <body>
+     <div class="menu_btn">
+         <i class="fas fa-bars"></i>
+     </div>
      <!-- Visual Content starts here -->
      <!-- Navigation section start -->
      <div class="bg_image"> <!-- The navigation background color -->
@@ -26,7 +26,6 @@
                 <nav>
                     <ul class="left_nav">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#comp">Company</a></li>
                         <li><a href="#about">About Us</a></li>
                         <li><a href="#portfolio">Portfolio</a></li>
                         <li><a href="#testimony">Testimony</a></li>
